# cant

./: CMakeLists.txt  README.md  build.sh
config/: diag_config.h.in
docs/: TEST_RESULTS.md  diagnostic_system.h  diagnostic_system.md  diagnostic_testing.md  memory_management.md  network_system.md
docs/specs/: language_specification.md
examples/: diagnostic_config.c  diagnostic_service.cant
lua/cant/: README.md  filetype.lua  init.lua  syntax.lua
src/compiler/analysis/: cfg.h  data_flow.h  dominators.h  loop_analysis.h  pattern_flow.c  pattern_flow.h  peephole.c  peephole.h  semantic.c  semantic.h
src/compiler/automotive/: can_validation.c  can_validation.h
src/compiler/backend/: CMakeLists.txt  llvm_gen.c  llvm_gen.h  llvm_generator.c  llvm_generator.h  llvm_optimizations.c  llvm_optimizations.h
src/compiler/frontend/: lexer.c  lexer.h  parser.c  parser.h
src/compiler/ir/: ir_builder.c  ir_builder.h
src/compiler/middle/: ast.c  ast.h  types.c  types.h
src/compiler/middle/transforms/: diagnostic_patterns.c  diagnostic_patterns.h  pattern_optimizer.c  pattern_optimizer.h
src/compiler/optimization/: pass_manager.h  pattern_matcher.h  vectorizer.h
src/compiler/utils/: error.h
src/hardware/: can_driver.c  can_driver.h  dma_config.c  dma_config.h  interrupt_handler.c  timer_hw.c  timer_hw.h  timer_opt.c  watchdog.c  watchdog.h
src/runtime/: app.c
src/runtime/core/: cache_opt.c  critical_section.c  critical_section.h  sys_monitor.c  sys_monitor.h  system_config.h
src/runtime/diagnostic/: CMakeLists.txt  comm_manager.c  comm_manager.h  data_manager.c  data_manager.h  diag_core.c  diag_core.h  diag_error.c  diag_error.h  diag_filter.c  diag_logger.c  diag_logger.h  diag_monitor.c  diag_monitor.h  diag_parser.c  diag_parser.h  diag_protocol.c  diag_protocol.h  diag_recorder.c  diag_recorder.h  diag_response.c  diag_response.h  diag_router.c  diag_router.h  diag_security.c  diag_security.h  diag_session.c  diag_session.h  diag_state.c  diag_state.h  diag_system.c  diag_system.h  diag_timer.c  diag_timer.h  diag_transport.c  diag_transport.h  dtc_manager.c  dtc_manager.h  event_handler.c  event_handler.h  (+18 more)
src/runtime/diagnostic/config/: CMakeLists.txt  config_manager.c  config_manager.h
src/runtime/diagnostic/crypto/: crypto_utils.c  crypto_utils.h
src/runtime/diagnostic/data/: diag_data.c  diag_data.h  diag_data_manager.c  diag_data_manager.h
src/runtime/diagnostic/error/: error_handler.c  error_handler.h
src/runtime/diagnostic/logging/: diag_logger.c  diag_logger.h
src/runtime/diagnostic/os/: critical.c  critical.h  timer.c  timer.h
src/runtime/diagnostic/performance/: perf_monitor.c  perf_monitor.h
src/runtime/diagnostic/resource/: resource_manager.c  resource_manager.h
src/runtime/diagnostic/routines/: diag_routines.c  diag_routines.h
src/runtime/diagnostic/security/: security_manager.c  security_manager.h
src/runtime/diagnostic/services/: diag_services.c  diag_services.h
src/runtime/diagnostic/session/: session_fsm.c  session_fsm.h
src/runtime/diagnostic/tests/: test_diag_data.cpp  test_diag_error_injection.cpp  test_diag_integration.cpp  test_diag_memory.cpp  test_diag_routines.cpp  test_diag_routines_extended.cpp  test_diag_system.cpp
src/runtime/diagnostic/tests/config/: test_config.yaml
src/runtime/diagnostic/tests/mocks/: battery_mock.h  ecu_mock.c  ecu_mock.h  memory_mock.c  memory_mock.h  network_mock.c  network_mock.h  sensors_mock.c  sensors_mock.h
src/runtime/diagnostic/timing/: timing_monitor.c  timing_monitor.h
src/runtime/diagnostics/: dtc_handler.c  dtc_handler.h  network_manager.c  network_manager.h  session_manager.c  session_manager.h  uds_services.c  uds_services.h
src/runtime/drivers/: can_driver.c  can_driver.h  flexray_driver.c  flexray_driver.h
src/runtime/memory/: mem_pool.c  mem_pool.h  memory_manager.c  memory_manager.h  rt_memory.c  rt_memory.h
src/runtime/network/: buffer_manager.c  buffer_manager.h  message_handler.c  message_handler.h  net_buffer.c  net_buffer.h  net_core.c  net_core.h  net_interface.c  net_interface.h  net_protocol.c  net_protocol.h  network_handler.c  network_handler.h
src/runtime/os/: critical.c  critical.h  os_core.c  os_core.h  os_types.h
src/runtime/platform/hardware/: can.c  can.h  cellular.c  cellular.h  ethernet.c  ethernet.h  wifi.c  wifi.h
src/runtime/protocols/: isotp.c  isotp.h  j1939.c  j1939.h
src/runtime/rte/: rte_core.c  rte_core.h  rte_types.h
src/runtime/safety/: alive_monitor.c  alive_monitor.h  cpu_monitor.c  cpu_monitor.h  e2e_protection.c  e2e_protection.h  flow_monitor.c  flow_monitor.h  memory_test.c  memory_test.h  safety_data.c  safety_data.h  watchdog.c  watchdog.h
src/runtime/scheduler/: rt_scheduler.c  rt_scheduler.h
src/runtime/utils/: crc.c  crc.h  timer.c  timer.h
src/runtime/watchdog/: watchdog.c  watchdog.h
src/utils/: error.c  error.h
test/runtime/diagnostic/: test_diag_system.c
test/runtime/memory/: test_memory_manager.c
test/runtime/network/: test_net_buffer.c  test_net_core.c
tests/: CMakeLists.txt  run_final_tests.sh  verify_performance.py
tests/diagnostic/: test_diag_integration.c  test_diag_integration_advanced.c  test_diag_logger.c  test_diag_monitor.c  test_diag_parser.c  test_diag_recorder.c  test_diag_router_advanced.c  test_diag_security.c  test_diag_session.c  test_diag_state.c  test_diag_timer.c
tests/final/: hardware_test.c  system_integration_test.c
tests/performance/: test_network_perf.c  test_system_perf.c
tests/unit/: can_validation_tests.c  lexer_tests.c  llvm_generator_tests.c  parser_tests.c  rt_scheduler_tests.c  semantic_tests.c
tools/: check_status.sh  performance_tune.py
tools/dev_utils/: signal_analyzer.c  signal_analyzer.h
